# agent-harness

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  vitest.config.ts
docs/plans/: 2026-02-25-typescript-migration-design.md  2026-02-25-typescript-migration-plan.md  2026-02-26-hybrid-agent-sdk-plan.md
scenarios/: domain_complex_agent.yaml  domain_simple_skill.yaml  example_agent_delegation.yaml  example_code_review.yaml  example_skill_invocation.yaml
scenarios/domain/: context_no_direct_read.yaml  edge_ambiguous_domain.yaml  edge_implicit_multi_domain.yaml  edge_tier2_domain.yaml  multi_domain_order_inventory.yaml  multi_domain_order_payment.yaml  multi_domain_three_way.yaml  non_domain_build.yaml  non_domain_general_programming.yaml  single_domain_admin_front.yaml  single_domain_channel.yaml  single_domain_customer_support.yaml  single_domain_integration.yaml  single_domain_inventory.yaml  single_domain_member.yaml  single_domain_oms_front.yaml  single_domain_oms_log.yaml  single_domain_oms_settings.yaml  single_domain_order.yaml  single_domain_payment.yaml  single_domain_qna.yaml  skill_domain_impact.yaml  skill_domain_scope.yaml
scenarios/integration/: multi_domain_order_payment_e2e.yaml  single_domain_order_e2e.yaml
scripts/: dry-run.ts
src/: cli.ts  index.ts
src/agent_harness/: __init__.py  cli.py  context_analyzer.py  context_loader.py  loader.py  (+5 more)
tests/: conftest.py  test_context_analyzer.py  test_context_loader.py  test_domain_routing.py  test_loader.py  test_runner.py  test_tool_executor.py  test_validators.py
(+46 files in other folders)
